# MMDL-Agent

./: .gitignore  README.md  TESTING.md  environment.yml  main.py  pyproject.toml  开发指南.md
Docs/: 01-LangChain.ipynb  02-LangGraph.ipynb  03-LangSmith.ipynb
app/api/: main.py
app/config/: settings.py  settings_example.py
app/core/: agent.py  graph.py  graph_example.py
app/exceptions/: base.py
app/memory/: checkpoint.py  state.py
app/prompts/: README.md  summarize.py
app/schemas/: detection.py
app/tools/: anomaly_detection.py  anomaly_detection_example.py
app/utils/: logging.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_exceptions.py  test_memory.py
web/: README.md  detection.html  index.html
web/assets/css/: dashboard.css  detection-form.css  style.css
web/assets/js/: api-client.js  dashboard.js  detection-form.js
