[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-anomaly-agent"
version = "0.1.0"
description = "Production-ready LangChain + LangGraph industrial anomaly detection agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "langchain>=0.2",
  "langgraph>=0.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
